cluster/apps/networking/traefik/middlewares/traefik-forward-auth/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-forward-auth
  namespace: networking
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.middlewares: "networking-traefik-forward-auth@kubernetescrd"
    external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
    external-dns/is-public: "true"
    # hajimari.io/enable: "true"
    # hajimari.io/icon: "video-input-antenna"
spec:
  ingressClassName: "traefik"
  tls:
    - hosts:
        - "auth.${SECRET_DOMAIN}"
      secretName: "traefik-forward-auth-tls"
  rules:
    - host: "auth.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik-forward-auth
                port:
                  number: 4181
